[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! My name is Manthan, and this is my first WebApp.
+            Hi! My name is Tamata, and this is my first WebApp.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
